--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -87,22 +87,24 @@ EVTDESC66033;After years of hardship, through a combination of military action, 
 EVTOPTA66033;We must first tend to the ones who survived.;;;;;;;;x;
 EVTOPTB66033;Time to rebuild our nation, with calm and temperance!;;;;;;;;x;
 EVTOPTC66033;Spread our wings! The world is ours to inherit!;;;;;;;;x;
-EVENTNAME66034;Defeat!;;;;;;;;x;
-EVENTDESC66034;Despite our best efforts, the last of our cities have now fallen to the zombie outbreak, and it is only a matter of time before the government itself is threatened. Our military forces have been overwhelmed by the sheer number of zombies, and our medical teams have been unable to find a cure or effective treatment. We have lost many of our citizens, including some of our most valued leaders and advisors. The situation is bleak and we must face the reality that there is nothing we can do to stop the outbreak at this point.;
-EVENTOPTA66034;We are going down with our ship as the men we are!;;;;;;;;x;
-EVENTOPTB66034;Reallocate the government to one of our allies or whoever is willing to take us in!;;;;;;;;x;
-EVENTOPTC66034;It's time to march into the wasteland and start anew.;;;;;;;;x;
-EVENTNAME66035;State of Emergency...?;;;;;;;;x;
-EVENTDESC66035;Thanks to the valiant efforts of our citizens and the tireless work of our medical and military personnel, we have managed to overcome the zombie outbreak that threatened our kingdom. While the threat of the outbreak is not entirely gone, we have made significant progress in containing and eliminating the threat. The emergency measures that were put in place, such as curfews, travel restrictions, and the mobilization of military forces, were necessary at the time, but they are now no longer needed. Continuing the state of emergency unnecessarily would be detrimental to our country in several ways. It would hamper our economy, disrupt our citizens' daily lives, and strain our resources. Additionally, it would send a message of fear and uncertainty to our people, which could damage morale and confidence in our government.;;;;;;;;x;
-EVENTOPTA66035;It's time to go back to normal indeed;;;;;;;;x;
-EVENTOPTB66035;But what if they came back?!;;;;;;;;x;
-EVENTNAME66036;The Conquest of the Wasteland;;;;;;;;x;
-EVENTDESC66036;Now that we have secured our borders and ensured the safety of our citizens, it is time for us to expand our territory and reclaim the land that was lost during the outbreak. There is an empty space of wasteland near us that was once inhabited by human settlements. These settlements were overrun by the zombies and had to be abandoned, but with the threat now neutralized, we have the opportunity to reclaim this land and rebuild our nation.;;;;;;;;x;
-EVENTOPTA66036;Onwards! Conquer the land!;;;;;;;;x;
-EVENTOPTB66036;It's better if we stay safe inside.;;;;;;;;x;
-EVENTNAME66037;Expedition into the Wasteland;;;;;;;;x;
-EVENTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;x;
-EVENTOPTA66037;Great!;;;;;;;;x;
+EVTNAME66034;Defeat!;;;;;;;;x;
+EVTDESC66034;Despite our best efforts, the last of our cities have now fallen to the zombie outbreak, and it is only a matter of time before the government itself is threatened. Our military forces have been overwhelmed by the sheer number of zombies, and our medical teams have been unable to find a cure or effective treatment. We have lost many of our citizens, including some of our most valued leaders and advisors. The situation is bleak and we must face the reality that there is nothing we can do to stop the outbreak at this point.;
+EVTOPTA66034;We are going down with our ship as the men we are!;;;;;;;;x;
+EVTOPTB66034;Reallocate the government to one of our allies or whoever is willing to take us in!;;;;;;;;x;
+EVTOPTC66034;It's time to march into the wasteland and start anew.;;;;;;;;x;
+EVTNAME66035;State of Emergency...?;;;;;;;;x;
+EVTDESC66035;Thanks to the valiant efforts of our citizens and the tireless work of our medical and military personnel, we have managed to overcome the zombie outbreak that threatened our kingdom. While the threat of the outbreak is not entirely gone, we have made significant progress in containing and eliminating the threat. The emergency measures that were put in place, such as curfews, travel restrictions, and the mobilization of military forces, were necessary at the time, but they are now no longer needed. Continuing the state of emergency unnecessarily would be detrimental to our country in several ways. It would hamper our economy, disrupt our citizens' daily lives, and strain our resources. Additionally, it would send a message of fear and uncertainty to our people, which could damage morale and confidence in our government.;;;;;;;;x;
+EVTOPTA66035;It's time to go back to normal indeed;;;;;;;;x;
+EVTOPTB66035;But what if they came back?!;;;;;;;;x;
+EVTNAME66036;The Conquest of the Wasteland;;;;;;;;x;
+EVTDESC66036;Now that we have secured our borders and ensured the safety of our citizens, it is time for us to expand our territory and reclaim the land that was lost during the outbreak. There is an empty space of wasteland near us that was once inhabited by human settlements. These settlements were overrun by the zombies and had to be abandoned, but with the threat now neutralized, we have the opportunity to reclaim this land and rebuild our nation.;;;;;;;;x;
+EVTOPTA66036;Onwards! Conquer the land!;;;;;;;;x;
+EVTOPTB66036;It's better if we stay safe inside.;;;;;;;;x;
+EVTNAME66037;Expedition into the Wasteland;;;;;;;;x;
+EVTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;x;
+EVTOPTA66037;Great!;;;;;;;;x;
+EVTNAME66100;The rise of the Herald of the Wasteland;;;;;;;;x;
+EVTNAME66100;The rise of the Herald of the Wasteland;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
