--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -103,8 +103,9 @@ EVTOPTB66036;It's better if we stay safe inside.;;;;;;;;x;
 EVTNAME66037;Expedition into the Wasteland;;;;;;;;x;
 EVTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;x;
 EVTOPTA66037;Great!;;;;;;;;x;
-EVTNAME66100;The rise of the Herald of the Wasteland;;;;;;;;x;
-EVTNAME66100;The rise of the Herald of the Wasteland;;;;;;;;x;
+EVTNAME66300;The rise of the Herald of the Wasteland;;;;;;;;x;
+EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;x;
+EVTOPTA66300;ARISE!;;;;;;;;x;
 ap_rebuild_society;Rebuilding Society;;;;;;;;x;
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;x;
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;x;
@@ -122,7 +123,7 @@ ap_expedition_desc;This province will be the point of departure of an expedition
 do_not_annex;The Wasteland Expand!;;;;;;;;x;
 do_not_annex_desc;The wasteland Expands!;;;;;;;;x;
 ap_plague_inc;Herald of the Wasteland;;;;;;;;x;
-ap_plague_inc_desc;A harbinger of doom, a messenger of decay and desolation. Its very presence signals the end of life as we know it, and the arrival of an age of barrenness and desolation. ;;;;;;;;x;
+ap_plague_inc_desc;A harbinger of doom, a messenger of decay and desolation. Its very presence signals the end of life as we know it, and the arrival of an age of barrenness and desolation.;;;;;;;;x;
 
 
 
