Spanish Viceroyalties Restoration and Fix
- Restored the old five spanish viceroyalty tags
- Fixed viceroyalty formation decisions
- They will now properly be Autonomous Dependencies
- Added a decision to reform and democratize the viceroyalties into Dominions if Spain is a parliamentary monarchy

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -4014,7 +4014,7 @@ LSK_bourgeois_dictatorship;Republic of Alaska;x;
 LSK_fascist_dictatorship;Alaskan State of the North;x;
 LSK_colonial_company;Russkaya Amyerika;x;
 LSK_rus_colonial_company;Russkaya Amyerika;x;
-LSK_dominion;Protectorate of Alaska;x;
+LSK_dominion;Russkaya Amyerika;x;
 LSK_ADJ;Alaskan;x;
 ##### LUA #####;
 LUA_absolute_monarchy;Anachak Ruangphabang;x;
@@ -7469,6 +7469,66 @@ VNZ_fascist_dictatorship;República de Venezuela;x;
 VNZ_colonial_company;Dominio de Venezuela;x;
 VNZ_dominion;Dominio de Venezuela;x;
 VNZ_ADJ;Venezolano;x;
+##### CGC #####;
+CGC_absolute_monarchy;Capitanía General de Chile;x;
+CGC_prussian_constitutionalism;Capitanía General de Chile;x;
+CGC_hms_government;Capitanía General de Chile;x;
+CGC_democracy;República Española de Chile;x;
+CGC_proletarian_dictatorship;República Popular Comunista de Chile Español;x;
+CGC_presidential_dictatorship;República Española de Chile;x;
+CGC_bourgeois_dictatorship;República Española de Chile;x;
+CGC_fascist_dictatorship;El Estado Hispano-Chileno;x;
+CGC_colonial_company;Capitanía General de Chile;x;
+CGC_dominion;Capitanía General de Chile;x;
+CGC_ADJ;Chilean;x;
+##### VNG #####;
+VNG_absolute_monarchy;Virreinato de la Nueva Granada;x;
+VNG_prussian_constitutionalism;Virreinato de la Nueva Granada;x;
+VNG_hms_government;Virreinato de la Nueva Granada;x;
+VNG_democracy;República Española de Nueva Granada;x;
+VNG_proletarian_dictatorship;República Popular Comunista de Nueva Granada Español;x;
+VNG_presidential_dictatorship;República Española de Nueva Granada;x;
+VNG_bourgeois_dictatorship;República Española de Nueva Granada;x;
+VNG_fascist_dictatorship;El Estado Español de Nueva Granada;x;
+VNG_colonial_company;Virreinato de la Nueva Granada;x;
+VNG_dominion;Virreinato de la Nueva Granada;x;
+VNG_ADJ;New Granadan;x;
+##### VOP #####;
+VOP_absolute_monarchy;Virreinato del Perú;x;
+VOP_prussian_constitutionalism;Virreinato del Perú;x;
+VOP_hms_government;Virreinato del Perú;x;
+VOP_democracy;República Española de Peru;x;
+VOP_proletarian_dictatorship;República Popular Comunista de Peru Español;x;
+VOP_presidential_dictatorship;República Española de Peru;x;
+VOP_bourgeois_dictatorship;República Española de Peru;x;
+VOP_fascist_dictatorship;El Estado Español de Peru;x;
+VOP_colonial_company;Virreinato del Perú;x;
+VOP_dominion;Virreinato del Perú;x;
+VOP_ADJ;Peruvian;x;
+##### VLP #####;
+VLP_absolute_monarchy;Virreinato del Río de la Plata;x;
+VLP_prussian_constitutionalism;Virreinato del Río de la Plata;x;
+VLP_hms_government;Virreinato del Río de la Plata;x;
+VLP_democracy;República Española de Río de la Plata;x;
+VLP_proletarian_dictatorship;República Popular Comunista de Río de la Plata Español;x;
+VLP_presidential_dictatorship;República Española de Río de la Plata;x;
+VLP_bourgeois_dictatorship;República Española de Río de la Plata;x;
+VLP_fascist_dictatorship;El Estado Español de Río de la Plata;x;
+VLP_colonial_company;Virreinato del Río de la Plata;x;
+VLP_dominion;Virreinato del Río de la Plata;x;
+VLP_ADJ;Rio de la Platan;x;
+##### VNS #####;
+VNS_absolute_monarchy;Virreinato del Nueva España;x;
+VNS_prussian_constitutionalism;Virreinato del Nueva España;x;
+VNS_hms_government;Virreinato del Nueva España;x;
+VNS_democracy;República Española de Nueva España;x;
+VNS_proletarian_dictatorship;República Popular Comunista de Nueva España;x;
+VNS_presidential_dictatorship;República Española de Nueva España;x;
+VNS_bourgeois_dictatorship;República Española de Nueva España;x;
+VNS_fascist_dictatorship;El Estado Español de Nueva España;x;
+VNS_colonial_company;Virreinato del Nueva España;x;
+VNS_dominion;Virreinato del Nueva España;x;
+VNS_ADJ;New Spanish;x; 
 #### VOC ####;
 VOC_absolute_monarchy;Rijk van Oost-Indië;x;
 VOC_prussian_constitutionalism;Rijk van Oost-Indië;x;
