--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1527,6 +1527,16 @@ VLK_dominion;Zuidafrika;;;;;;;;;;;;;x
 VLK_hms_government;Afrikaner Kingdom;;;;;;;;;;;;;x
 VLK_proletarian_dictatorship;Socialist Republic of South Africa;;;;;;;;;;;;;x
 VLK_prussian_constitutionalism;Afrikaner Kingdom;;;;;;;;;;;;;x
+VLP_colonial_company;Virreinato del Río de la Plata;;;;;;;;;;;;;x
+VNG_colonial_company;Virreinato de la Nueva Granada;;;;;;;;;;;;;x
+VNS_colonial_company;Virreinato de Nueva España;;;;;;;;;;;;;x
+CGC_colonial_company;Capitanía General de Chile;;;;;;;;;;;;;x
+VOP_colonial_company;Virreinato del Peru;;;;;;;;;;;;;x
+VLP_dominion;Virreinato del Río de la Plata;;;;;;;;;;;;;x
+VNG_dominion;Virreinato de la Nueva Granada;;;;;;;;;;;;;x
+VNS_dominion;Virreinato de Nueva España;;;;;;;;;;;;;x
+CGC_dominion;Capitanía General de Chile;;;;;;;;;;;;;x
+VOP_dominion;Virreinato del Peru;;;;;;;;;;;;;x
 VOC_colonial_company;Nederlands-Indië;;;;;;;;;;;;;x
 VOJ_colonial_company;Serbian Military Frontier;;;;;;;;;;;;;x
 VTU_colonial_company;New Hebrides;;;;;;;;;;;;;x
