--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3414,3 +3414,5 @@ renovate_constantinople_desc;Jewel of our national being, Constantinople, has lo
 renovate_constantinople_title;Renovate City of World's Desire;;;;;;;;;;;;;x
 renovate_cities_of_the_empire_desc;Alexandria, Antioch, Smyrna and several others are burgeoning sites that are overflowing with people and activity but in dire need of modernization and reconstruction. New roads, districts and housing are to be built, factories to be expanded. We will turn them into modernized versions of what they once were.;;;;;;;;;;;;;x
 renovate_cities_of_the_empire_title;Renovate Cities of the Empire;;;;;;;;;;;;;x
+democratize_viceroyalties_desc;Last time our colonies rebelled at the turn of 19th century, their goal initially was not independence, it was political reform and autonomy. Perhaps, we should do now what our predecessors were too conservative to do then.;;;;;;;;;;;;;x
+democratize_viceroyalties_title;Democratize Viceroyalties;;;;;;;;;;;;;x
