--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -675,6 +675,11 @@ VEN;Venice;Venise;Venedig;;;;;;;;;;;x
 VFR;Vichy France;;;;;;;;;;;;;x
 VLG;Volgaland;;;;;;;;;;;;;x
 VLK;South African Republic;;;;;;;;;;;;;x
+VLP;Río de la Plata;;;;;;;;;;;;;x
+VNG;Nueva Granada;;;;;;;;;;;;;x
+VNS;Nueva España;;;;;;;;;;;;;x
+CGC;Chile;;;;;;;;;;;;;x
+VOP;Peru;;;;;;;;;;;;;x
 VNZ;Venezuela;Venezuela;Venezuela;;;;;;;;;;;x
 VOC;Verenigde Oost-Indische Compagnie;;;;;;;;;;;;;x
 VOJ;Vojvodina;;;;;;;;;;;;;x
