Investors, not Apparatchiks

--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -4735,7 +4735,7 @@ PRICE_HISTORY_TIME_RANGE;Last $MONTHS$ months;Derniers $MONTHS$ mois;;;;;;;;;;;;
 PROC_FLAGS;Processing Flags…;Traitement des drapeaux…;;;;;;;;;;;;x
 PROCEED;Proceed;Accepter;;;;;;;;;;;;x
 PROD_INVESTORS;Investors;Investisseurs;;;;;;;;;;;;x
-PROD_NO_CURRENT_PROJECTS;Our §Y$POPTYPE$§W have no projects currently;Notre POP §Y$POPTYPE$§W n'a actuellement aucun projet.;;;;;;;;;;;;x
+PROD_NO_CURRENT_PROJECTS;Our §YInvestors§W have no projects currently;Notre POP §Y$POPTYPE$§W n'a actuellement aucun projet.;;;;;;;;;;;;x
 PROD_YOUR_CURRENT_BUDGET;Your current budget:;Votre budget actuel :;;;;;;;;;;;;x
 PROD_YOUR_INVESTMENT;Your investment:;Votre investissement :;;;;;;;;;;;;x
 PRODUCED_DETAIL;$VAL$ available for our country;$VAL$ sur notre marché commun (priorité/rang);;;;;;;;;;;;x
