Some Map Adjustments

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -655,11 +655,12 @@ PEU_2301;Ucayali & Pando;;;;;;;;;;;;;x
 PEU_2303;Arequipa;;;;;;;;;;;;;x
 BRZ_2306;São Paulo;;;;;;;;;;;;;x
 BOL_2309;Atacama;;;;;;;;;;;;;x
-BOL_2313;Chuquisaca-Cochabamba;;;;;;;;;;;;;x
+BOL_2313;Sucre;;;;;;;;;;;;;x
 BOL_2314;Potosí;;;;;;;;;;;;;x
 BOL_2315;Tarija;;;;;;;;;;;;;x
 BOL_2317;Santa Cruz;;;;;;;;;;;;;x
 BOL_2321;La Paz;;;;;;;;;;;;;x
+BOL_3553;Moxos;;;;;;;;;;;;;x
 CHL_2322;Coquimbo;;;;;;;;;;;;;x
 CHL_2327;Norte de Chile;;;;;;;;;;;;;x
 CHL_2330;Concepcíon;;;;;;;;;;;;;x
@@ -679,7 +680,7 @@ ARG_2371;Jujuy;;;;;;;;;;;;;x
 ARG_2373;Tucumán;;;;;;;;;;;;;x
 ARG_2374;Catamarca;;;;;;;;;;;;;x
 ARG_2376;Santiago del Estero;;;;;;;;;;;;;x
-ARG_2377;Gualamba;;;;;;;;;;;;;x
+ARG_2377;Chacogualamba;;;;;;;;;;;;;x
 ARG_2383;San Luis;;;;;;;;;;;;;x
 ARG_2384;Córdoba;;;;;;;;;;;;;x
 ARG_2385;La Rioja;;;;;;;;;;;;;x
@@ -688,7 +689,7 @@ ARG_2389;Mendoza;;;;;;;;;;;;;x
 ARG_2391;Río Negro;;;;;;;;;;;;;x
 ARG_2395;Pampa Occidental;;;;;;;;;;;;;x
 ARG_3599;Pampa Oriental;;;;;;;;;;;;;x
-ARG_2398;Patagonia;;;;;;;;;;;;;x
+ARG_2392;Patagonia;;;;;;;;;;;;;x
 ARG_2400;Tierra del Fuego;;;;;;;;;;;;;x
 ARG_2554;Misiones Occidentales;;;;;;;;;;;;;x
 BRZ_2401;Amazonas;;;;;;;;;;;;;x
