--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2192,7 +2192,7 @@ FIL_bourgeois_dictatorship;Republic of Central America;x;
 FIL_fascist_dictatorship;New Central American State;x;
 FIL_colonial_company;Protectorate of Central America;x;
 FIL_dominion;Protectorate of Central America;x;
-FIL_ADJ;Central American
+FIL_ADJ;Central American;x;
 ##### FIN #####;
 FIN_absolute_monarchy;Suomen Kuningaskunta;x;
 FIN_prussian_constitutionalism;Suomen Kuningaskunta;x;
@@ -6427,6 +6427,9 @@ SOV_ADJ;Sovetskiy;x;
 SPA_absolute_monarchy;Reino de España;x;
 SPA_prussian_constitutionalism;Reino de España;x;
 SPA_hms_government;Reino de España;x;
+SPA_absolute_monarchy2;Imperio Español;x;
+SPA_prussian_constitutionalism2;Imperio Español;x;
+SPA_hms_government2;Imperio Español;x;
 SPA_democracy;República Española;x;
 SPA_proletarian_dictatorship;Unión Socialista de España;x;
 SPA_presidential_dictatorship;Estado Español;x;
