Plague Inc mode now playable

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -1,13 +1,14 @@
 #;#;#;#;#;#;#;#;#;#;#;#;#;#;;;;;;;x;
-frankenstein;Mary Shelley's Frankenstein;;;;;;;x;
-frankenstein_desc;Frankenstein was a novel published by Mary Shelley in 1818. It was a fusion of the gothic novel and the Romantic Movement and considered one of the earliest examples of science fiction. It served as a warning against the expansion of modern man in the Industrial Revolution and was loosely based on Giovanni Aldini’s electrical experiments on dead and (sometimes) living animals.;;;;;;;x;
+frankenstein;Mary Shelley's Frankenstein;;;;;;;;x;
+frankenstein_desc;Frankenstein was a novel published by Mary Shelley in 1818. It was a fusion of the gothic novel and the Romantic Movement and considered one of the earliest examples of science fiction. It served as a warning against the expansion of modern man in the Industrial Revolution and was loosely based on Giovanni Aldini’s electrical experiments on dead and (sometimes) living animals.;;;;;;;;x;
 ZOM;Infested Wasteland;;;;;;;;x;
 ZOM_ADJ;Infested;;;;;;;;x;
 undead;Undead;;;;;;;;x;
 zombie_rebels_army;Army of The Dead;;;;;;;;x;
 zombie_rebels_desc;Zombies are reanimated corpses. The brain retains base facilities, namely motor function. In its nearly mindless state, it has no grasp of emotion, personality, or sensation. However, in rare cases, some zombies reflexively perform activities from their past lives. Their rotting bodies operate on a much lower level than a normal human. Circulatory, respiratory, and digestive systems are unaffected by reanimation. Labored breathing, choking, and moaning are therefore reflexive as no oxygen is carried through the blood. Furthermore, the nervous system functions primarily within the brain and sensory reception is minimal at best. The undead are incapable of fatigue and endlessly pursue their victims. Subsequently, a zombie may chase its victim even if it’s missing limbs. Therefore, the only way to kill a zombie is by destroying its brain. The only observable action a zombie takes part in is hunting and eating living organisms, especially humans. Approach with extreme caution.;;;;;;;;x;
 zombie_rebels_name;Zombies;;;;;;;;x;
-zombie_rebels_title;Zombie;;;;;;;;x; 
+zombie_rebels_title;Zombie;;;;;;;;x;
+zombified_army;Undead Army;;;;;;;;x;
 zombie_outbreak;Zombie Outbreak;;;;;;;;x;
 EVTNAME66001;New Archeological Discovery!;;;;;;;;x;
 EVTDESC66001;A private expedition of our country into Egypt has recently discovered a new ancient building buried deep beneath the desert sands. The main chamber appears to be filled with amazing artifacts and treasures that could shed new light on the ancient civilization of Egypt. While the locals have expressed concern about a cursed disease within the chamber, we should not let their superstitions and ignorance prevent us from accessing this valuable historical find. ;;;;;;;;x;
@@ -34,16 +35,16 @@ EVTDESC66026;By declaring a state of emergency, we have suspended the normal fun
 EVTNAME66027;Government Powers Restored!;;;;;;;;x;
 EVTDESC66027;It is no longer necessary to allocate so much of our government's resources to the military. As such, we've restored the bureaucracy and returned power to the government proper. No longer shall our country be under military jurisdiction and its corrupt junta!;;;;;;;;x;
 EVTNAME66028;The Zombies Are Back!;;;;;;;;x;
-EVTDESC66028;We had cleared our country of zombies, but now they have crossed our border once more!;;;;;;;;x;
-EVTNAME66101;Zombieland;;;;;;;;x;
+EVTDESC66028;Despite our efforts to clean up our country of the zombie outbreak, we've just received reports that zombies have managed to cross over from one of our neighboring countries. It seems that they were unable to contain the outbreak, and it has now spilled over into our own borders.;;;;;;;;x;
+EVTNAME66101;Wasteland;;;;;;;;x;
 EVTDESC66101;Parts of our country have recently fallen under zombie control, and neither the local government nor the military have been able to restore order. Since we are unable to maintain control over the area, our people and the international community have come to refer to it as 'Zombieland': A wasteland where all societal structure has collapsed and where zombies roam freely. Future rehabitation will require extensive reconstruction and repopulation; we estimate that the province's human population is less than 20% of what it was in 1836, if not lower...;;;;;;;;x;
 EVTNAME66200;Zombies don't build countries;;;;;;;;x;
-EVTDESC66200;Event to turn Zombieland into Terra Nullius;;;;;;;;x;
-EVTNAME66201;Zombieland will soon be emptied;;;;;;;;x;
+EVTDESC66200;Event to turn the wasteland into Terra Nullius;;;;;;;;x;
+EVTNAME66201;The Wasteland decays;;;;;;;;x;
 EVTDESC66201;This event stops Zombieland from getting more provinces, hence in about a month's time it will be turned into Terra Nullius;;;;;;;;x;
 ZOMBIETAKEOVER;What a disaster!;;;;;;;;x;
-do_not_annex;Zombieland received a province recently, so it should not be annexed for at least a month;;;;;;;;x;
-accepts_new_provinces;Zombieland will accept new provinces;;;;;;;;x;
+do_not_annex;The Wasteland Spreads;;;;;;;;x;
+accepts_new_provinces;The Wasteland Spreads;;;;;;;;x;
 Z01;European Wasteland;;;;;;;;x;
 Z02;Asian Wasteland;;;;;;;;x;
 Z03;African Wasteland;;;;;;;;x;
