--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -68,3 +68,4 @@ no_turks_in_anatolia;Reclaimed Anatolia;;;;;;;;;x
 byzantine_levant;Reclaimed Levant;;;;;;;;;x
 byzantine_egypt;Reclaimed Egypt;;;;;;;;;x
 byzantine_georgia;Reclaimed Caucasus;;;;;;;;;x
+mexican_louisiana;Reclaimed Louisiana;;;;;;;;;x
