--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1495,3 +1495,5 @@ metternich;Klemens von Metternich;;;;;;;;;;;;;x
 metternich_desc;At the center of Concert of Europe stands its chief architect, Prince Metternich. Heavily conservative and anti-revolutionary, he is determined to retain Habsburg Absolutism and Europe's status quo.;;;;;;;;;;;;;x
 research_campaign;Active Research Campaign;;;;;;;;;;;;;x
 research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country;;;;;;;;;;;;;x
+church_property_confiscation;Church Property Confiscated;;;;;;;;;;;;;x
+church_property_confiscation_desc;We are fixing our budget holes with the property of the Catholic Church and its monasteries;;;;;;;;;;;;;x
