--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -421,6 +421,10 @@ EVTOPTA500288;We will not abandon the Mandate given to us by God;;;;;;;;;;;;;x
 EVTNAME500289;Educational Reform;;;;;;;;;;;;;x
 EVTDESC500289;In the 1860s, Tsar Alexander II of Russia implemented a series of educational reforms in order to modernize the Russian Empire. The reforms included the establishment of universities and secondary schools, the introduction of an education tax, the introduction of a national curriculum, and the reorganization of the Ministry of Education. These reforms significantly improved the quality of education in the Russian Empire and were an important factor in its modernization.;;;;;;;;;;;;;x
 EVTOPTA500289;Progress continues;;;;;;;;;;;;;x
+EVTNAME500290;Question of Pacifican Ports;;;;;;;;;;;;;x
+EVTDESC500290;Some years ago we have granted self-rule to our colonies in America, creating the Dominion of Russian America. However, several key ports were kept in direct Imperial control for strategic purposes. Now, some decades later, our Dominion is asking whether it is time to grant self-rule to these port towns as well.;;;;;;;;;;;;;x
+EVTOPTA500290;Yes, we trust they will use them well;;;;;;;;;;;;;x
+EVTOPTB500290;They will stay in the hands of Imperial Pacific Navy;;;;;;;;;;;;;x
 EVTDESC530001;On a night in $YEAR$, a fire broke out on the 3rd floor of J. L. Van Doren, Oil Merchant and Stearin Candle Manufacturer, known as a seller of whale oil, at 34 New Street in Manhattan, and spread quickly to adjoining buildings. During the ten and a half hours that it burned, the fire killed 4 Firefighters and 26 civilians and in total destroyed 345 buildings, resulting in property damage estimated between 5 and 10 million dollars. \n \n The fire would be the last of three devastating fires that affected the city, the other two occurring in 1776 & 1835. While very destructive, the $YEAR$ fire confirmed the value of building codes restricting wood-frame construction, which were put in place after the lessons learnt from the previous fires.;;;;;;;;;;;;;x
 EVTNAME530001;The Great New York City Fire of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA530001;Fully fund reconstruction efforts.;;;;;;;;;;;;;x
