Plague inc mode

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -15,9 +15,9 @@ EVTDESC66001;A private expedition of our country into Egypt has recently discove
 EVTOPTA66001;Our museums are hungry for new artifacts! §RTrigger the infection immediatly;;;;;;;;;;;;;x
 EVTOPTB66001;We shouldn't bother with this right now. §GDelay the infection for 10 years;;;;;;;;;;;;;x
 EVTOPTC66001;I want some of those artifacts as diplay in my office! §BStart Plague Inc Mode;;;;;;;;;;;;;x
-EVTNAME66002;A Mysterious Plague...;;;;;;;;;;;;;x
-EVTDESC66002;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;;;;;;x
-EVTOPTA66002;Uh Oh.;;;;;;;;;;;;;x
+EVTNAME66202;A Mysterious Plague...;;;;;;;;;;;;;x
+EVTDESC66202;They call it the Solomon Virus. It travels through the bloodstream, enters the brain, and uses the cells of the frontal lobe to replicate. However, this section of the brain is destroyed in the process and all bodily functions cease. Alive but dormant, the brain is slowly transformed by the virus into a completely new organ whose most notable trait is its independence from oxygen. By removing this all-important resource, the body is no longer dependent on complex support mechanisms such as the heart and lungs. Once mutation is complete, the new organ reanimates the body to transfer the virus. Historically, outbreaks of virus were few and far between, occurring infrequently in Ancient Egypt, Israel, and even noted to be the cause of Roman Order XXXVII and the construction of Hadrian’s Wall. Some of the most recent cases include the “mysterious” disappearance of the Roanoke Island settlers in 1587 and a 1762 outbreak on St. Lucia in the Caribbean. That is, of course, until today...;;;;;;;;;;;;;x
+EVTOPTA66202;How bad can it be?;;;;;;;;;;;;;x
 EVTNAME66004;The Plague Spreads...;;;;;;;;;;;;;x
 EVTDESC66004;"The natives tell of a sickness that darkens the soul, causing a thirst for the blood of their brothers. They tell of men, women, and even children whose flesh have become gray with rot and possess an unholy smell. Once darkened, there is no method of healing, save death, and that can only be achieved throughfire, since the body becomes resistant to all arms of man." This text was suspposedly taken from the accounts of Father Esteban Negron, 1523.;;;;;;;;;;;;;x
 EVTNAME66014;The Purge of $PROVINCENAME$;;;;;;;;;;;;;x
@@ -104,9 +104,16 @@ EVTOPTB66036;It's better if we stay safe inside.;;;;;;;;;;;;;x
 EVTNAME66037;Expedition into the Wasteland;;;;;;;;;;;;;x
 EVTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;;;;;;x
 EVTOPTA66037;Great!;;;;;;;;;;;;;x
-EVTNAME66300;The rise of the Herald of the Wasteland;;;;;;;;;;;;;x
+EVTNAME66300;The rise of the Herald of the Plague;;;;;;;;;;;;;x
 EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;;;;;;x
 EVTOPTA66300;ARISE!;;;;;;;;;;;;;x
+EVTDESC66301;;;;;;;;;;;;;;x
+AGRESSION_PLAGUE_WAR;$ORDER$ War to purge the Plague;;;;;;;;;;;;;x
+NORMAL_PLAGUE_WAR;$ORDER$ War to Purge the Plague;;;;;;;;;;;;;x
+plague_spreader;Plague War;;;;;;;;;;;;;x
+plague_spreader_short;Spread the Plague;;;;;;;;;;;;;x
+plague_cleanse;Plague War;;;;;;;;;;;;;x
+plague_cleanse_short;Purge the Plague;;;;;;;;;;;;;x
 ap_rebuild_society;Rebuilding Society;;;;;;;;;;;;;x
 ap_conservative_rebuild;Conservative Rebuild;;;;;;;;;;;;;x
 ap_temperace_rebuild;Temperate Rebuild;;;;;;;;;;;;;x
@@ -123,7 +130,7 @@ ap_expedition;Preparing an Expedition.;;;;;;;;;;;;;x
 ap_expedition_desc;This province will be the point of departure of an expedition into the Wasteland.;;;;;;;;;;;;;x
 do_not_annex;The Wasteland Expand!;;;;;;;;;;;;;x
 do_not_annex_desc;The wasteland Expands!;;;;;;;;;;;;;x
-ap_plague_inc;Herald of the Wasteland;;;;;;;;;;;;;x
+ap_plague_inc;Herald of the Plague;;;;;;;;;;;;;x
 ap_plague_inc_desc;A harbinger of doom, a messenger of decay and desolation. Its very presence signals the end of life as we know it, and the arrival of an age of barrenness and desolation.;;;;;;;;;;;;;x
 
 
