--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -108,8 +108,8 @@ EVTNAME66300;The rise of the Herald of the Plague;;;;;;;;;;;;;x
 EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;;;;;;x
 EVTOPTA66300;ARISE!;;;;;;;;;;;;;x
 EVTDESC66301;;;;;;;;;;;;;;x
-AGRESSION_PLAGUE_WAR;$ORDER$ War to purge the Plague;;;;;;;;;;;;;x
-NORMAL_PLAGUE_WAR;$ORDER$ War to Purge the Plague;;;;;;;;;;;;;x
+AGRESSION_PLAGUE_WAR;$FIRST$ War to purge the Plague;;;;;;;;;;;;;x
+NORMAL_PLAGUE_WAR;$FIRST$ War to Purge the Plague;;;;;;;;;;;;;x
 plague_spreader;Plague War;;;;;;;;;;;;;x
 plague_spreader_short;Spread the Plague;;;;;;;;;;;;;x
 plague_cleanse;Plague War;;;;;;;;;;;;;x
