Lots of loc, new pictures, end game added for plague mode

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -107,7 +107,9 @@ EVTOPTA66037;Great!;;;;;;;;;;;;;x
 EVTNAME66300;The rise of the Herald of the Plague;;;;;;;;;;;;;x
 EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;;;;;;x
 EVTOPTA66300;ARISE!;;;;;;;;;;;;;x
-EVTDESC66301;;;;;;;;;;;;;;x
+EVTNAME66302;Holy City Captured!;;;;;;;;;;;;;x
+EVTDESC66302;A Holy City has been captured! By desecrating this city we can tap into powerful dark energies that will imbue our undead army with new strength and abilities. The city's holy places will be desecrated and its inhabitants will be sacrificed to the dark powers we serve, unleashing a wave of unholy energy that will infuse our minions with newfound power.;;;;;;;;;;;;;x
+EVTOPTA66302;Do it!;;;;;;;;;;;;;x
 AGRESSION_PLAGUE_WAR;$FIRST$ War to purge the Plague;;;;;;;;;;;;;x
 NORMAL_PLAGUE_WAR;$FIRST$ War to Purge the Plague;;;;;;;;;;;;;x
 plague_spreader;Plague War;;;;;;;;;;;;;x
@@ -132,6 +134,16 @@ do_not_annex;The Wasteland Expand!;;;;;;;;;;;;;x
 do_not_annex_desc;The wasteland Expands!;;;;;;;;;;;;;x
 ap_plague_inc;Herald of the Plague;;;;;;;;;;;;;x
 ap_plague_inc_desc;A harbinger of doom, a messenger of decay and desolation. Its very presence signals the end of life as we know it, and the arrival of an age of barrenness and desolation.;;;;;;;;;;;;;x
+ap_desecreated_city_1;Holy Cities Taken: I/V;;;;;;;;;;;;;x
+ap_desecreated_city_1_desc;We have taken one out of five necessary holy cities.;;;;;;;;;;;;;x
+ap_desecreated_city_2;Holy Cities Taken: II/V;;;;;;;;;;;;;x
+ap_desecreated_city_2_desc;We have taken two out of five necessary holy cities.;;;;;;;;;;;;;x
+ap_desecreated_city_3;Holy Cities Taken: III/V;;;;;;;;;;;;;x
+ap_desecreated_city_3_desc;We have taken three out of five necessary holy cities.;;;;;;;;;;;;;x
+ap_desecreated_city_4;Holy Cities Taken: IV/V;;;;;;;;;;;;;x
+ap_desecreated_city_4_desc;We have taken four out of five necessary holy cities.;;;;;;;;;;;;;x
+ap_desecreated_city_5;Holy Cities Taken: V/V;;;;;;;;;;;;;x
+ap_desecreated_city_5_desc;We have taken five out of five necessary holy cities, granting us massive bonuses.;;;;;;;;;;;;;x
 
 
 
