--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -107,9 +107,15 @@ EVTOPTA66037;Great!;;;;;;;;;;;;;x
 EVTNAME66300;The rise of the Herald of the Plague;;;;;;;;;;;;;x
 EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;;;;;;x
 EVTOPTA66300;ARISE!;;;;;;;;;;;;;x
-EVTNAME66302;Holy City Captured!;;;;;;;;;;;;;x
-EVTDESC66302;A Holy City has been captured! By desecrating this city we can tap into powerful dark energies that will imbue our undead army with new strength and abilities. The city's holy places will be desecrated and its inhabitants will be sacrificed to the dark powers we serve, unleashing a wave of unholy energy that will infuse our minions with newfound power.;;;;;;;;;;;;;x
-EVTOPTA66302;Do it!;;;;;;;;;;;;;x
+EVTNAME66402;Holy City Captured!;;;;;;;;;;;;;x
+EVTDESC66402;A Holy City has been captured! By desecrating this city we can tap into powerful dark energies that will imbue our undead army with new strength and abilities. The city's holy places will be desecrated and its inhabitants will be sacrificed to the dark powers we serve, unleashing a wave of unholy energy that will infuse our minions with newfound power.;;;;;;;;;;;;;x
+EVTOPTA66402;Do it!;;;;;;;;;;;;;x
+EVTNAME66302;The Dark ritual begins;;;;;;;;;;;;;x
+EVTDESC66302;We are writting localization for a fictional game, write a short text about how the plague conquered enough holy cities to make a ritual, and it's a matter of time before they complete their ritual.;;;;;;;;;;;;;x
+EVTOPTA66302;There's nothing to be done now.;;;;;;;;;;;;;x
+EVTNAME66303;The Dark ritual has been completed;;;;;;;;;;;;;x
+EVTDESC66303;As the last vestiges of hope fade away, a sense of resignation sets in. The heroes who dared to challenge the forces of darkness have fallen, one by one, unable to overcome the overwhelming power of the plague. The fate of the world now rests in the hands of fate, and it seems that fate has already been decided. In the end, it seems that the only thing that can conquer darkness is darkness itself. The plague, once a mere disease, has become something more, something beyond comprehension. And now, the world is its plaything, a lifeless husk at the mercy of its dark whims.;;;;;;;;;;;;;x
+EVTOPTA66303;This is the end of the world as we know it.;;;;;;;;;;;;;x
 AGRESSION_PLAGUE_WAR;$FIRST$ War to purge the Plague;;;;;;;;;;;;;x
 NORMAL_PLAGUE_WAR;$FIRST$ War to Purge the Plague;;;;;;;;;;;;;x
 plague_spreader;Plague War;;;;;;;;;;;;;x
@@ -144,6 +150,8 @@ ap_desecreated_city_4;Holy Cities Taken: IV/V;;;;;;;;;;;;;x
 ap_desecreated_city_4_desc;We have taken four out of five necessary holy cities.;;;;;;;;;;;;;x
 ap_desecreated_city_5;Holy Cities Taken: V/V;;;;;;;;;;;;;x
 ap_desecreated_city_5_desc;We have taken five out of five necessary holy cities, granting us massive bonuses.;;;;;;;;;;;;;x
+ap_countdown;Ritual Countdown;;;;;;;;;;;;;x
+ap_countdown_desc;The Wasteland is preparing for a ritual.;;;;;;;;;;;;;x
 
 
 
