--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -45,21 +45,10 @@ EVTDESC66201;This event stops Zombieland from getting more provinces, hence in a
 ZOMBIETAKEOVER;What a disaster!;;;;;;;;;;;;;x
 do_not_annex;The Wasteland Spreads;;;;;;;;;;;;;x
 accepts_new_provinces;The Wasteland Spreads;;;;;;;;;;;;;x
-Z01;European Wasteland;;;;;;;;;;;;;x
-Z02;Asian Wasteland;;;;;;;;;;;;;x
-Z03;African Wasteland;;;;;;;;;;;;;x
-Z04;North American Wasteland;;;;;;;;;;;;;x
-Z05;South American Wasteland;;;;;;;;;;;;;x
-Z06;Oceanic Wasteland;;;;;;;;;;;;;x
-Z01_ADJ;Deceased;;;;;;;;;;;;;x
-Z02_ADJ;Infected;;;;;;;;;;;;;x
-Z03_ADJ;Fallen;;;;;;;;;;;;;x
-Z04_ADJ;Infested;;;;;;;;;;;;;x
-Z05_ADJ;Contaminated;;;;;;;;;;;;;x
-Z06_ADJ;Infected;;;;;;;;;;;;;x
 nogovernment;Wild wasteland;;;;;;;;;;;;;x
 noIdeology;Wilderness;;;;;;;;;;;;;x
 noIssue;None;;;;;;;;;;;;;x
+undead_party;"Plague Visionaries";;;;;;;;;;;;;x
 ap_lock_down;Lockdown.;;;;;;;;;;;;;x
 ap_lock_down;Our borders are closed, while it's rindering our research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
 ap_lock_down_title;Declare total lockdown!;;;;;;;;;;;;;x
@@ -77,6 +66,8 @@ ap_sieze_assets_desc;The government must do whatever it takes to ensure our coun
 ap_scouts_title;Scout for new land;;;;;;;;;;;;;x
 ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facilitate our colonizing process. By funding expeditions we will gather information about the land around us quicker be able to resettle faster.;;;;;;;;;;;;;x
 scouts_activated;Scouting for new land;;;;;;;;;;;;;x
+ap_ritual_title;The Dark Ritual;;;;;;;;;;;;;x
+ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritual that will bring this world as we know it to an end once and for all.;;;;;;;;;;;;;x
 EVTNAME66029;LOCKDOWN!;;;;;;;;;;;;;x
 EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;;;;;;x
 EVTOPTA66029;A worthy sacrifice.;;;;;;;;;;;;;x
@@ -152,7 +143,7 @@ ap_desecreated_city_5;Holy Cities Taken: V/V;;;;;;;;;;;;;x
 ap_desecreated_city_5_desc;We have taken five out of five necessary holy cities, granting us massive bonuses.;;;;;;;;;;;;;x
 ap_countdown;Ritual Countdown;;;;;;;;;;;;;x
 ap_countdown_desc;The Wasteland is preparing for a ritual.;;;;;;;;;;;;;x
-
+Variableholycities;" Holy cities captured ";;;;;;;;;;;;;x
 
 
 
