global victory conditions for plague mod

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -68,6 +68,8 @@ ap_scouts_desc;We can fund expeditions into the uncolonized wasteland and facili
 scouts_activated;Scouting for new land;;;;;;;;;;;;;x
 ap_ritual_title;The Dark Ritual;;;;;;;;;;;;;x
 ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritual that will bring this world as we know it to an end once and for all.;;;;;;;;;;;;;x
+ap_sacrifice_title;Sacrifice;;;;;;;;;;;;;x
+ap_sacrifice_desc;We can perform a quick sacrifice to strengthen our zombie army;;;;;;;;;;;;;x
 EVTNAME66029;LOCKDOWN!;;;;;;;;;;;;;x
 EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;;;;;;x
 EVTOPTA66029;A worthy sacrifice.;;;;;;;;;;;;;x
@@ -107,6 +109,9 @@ EVTOPTA66302;There's nothing to be done now.;;;;;;;;;;;;;x
 EVTNAME66303;The Dark ritual has been completed;;;;;;;;;;;;;x
 EVTDESC66303;As the last vestiges of hope fade away, a sense of resignation sets in. The heroes who dared to challenge the forces of darkness have fallen, one by one, unable to overcome the overwhelming power of the plague. The fate of the world now rests in the hands of fate, and it seems that fate has already been decided. In the end, it seems that the only thing that can conquer darkness is darkness itself. The plague, once a mere disease, has become something more, something beyond comprehension. And now, the world is its plaything, a lifeless husk at the mercy of its dark whims.;;;;;;;;;;;;;x
 EVTOPTA66303;This is the end of the world as we know it.;;;;;;;;;;;;;x
+EVTNAME66304;Humanity Prevailed!;;;;;;;;;;;;;x
+EVTDESC66304;After years of hardship, through a combination of military action, scientific research, and strategic planning, humanity was able to stem the spread of the virus, eliminate the infected and destroy the cult. Now that the threat has been neutralized, we must turn our attention to rebuilding. Many towns and cities have been destroyed, and countless lives have been lost. We must focus on providing aid to the survivors, rebuilding infrastructure, and establishing new communities. Humanity once again prevailed, and it's once again time to rebuild.;;;;;;;;;;;;;x
+EVTOPTA66304;Once again, we survived.;;;;;;;;;;;;;x
 AGRESSION_PLAGUE_WAR;$FIRST$ War to purge the Plague;;;;;;;;;;;;;x
 NORMAL_PLAGUE_WAR;$FIRST$ War to Purge the Plague;;;;;;;;;;;;;x
 plague_spreader;Plague War;;;;;;;;;;;;;x
