lots of changes

--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -49,8 +49,8 @@ nogovernment;Wild wasteland;;;;;;;;;;;;;x
 noIdeology;Wilderness;;;;;;;;;;;;;x
 noIssue;None;;;;;;;;;;;;;x
 undead_party;"Plague Visionaries";;;;;;;;;;;;;x
-ap_lock_down;Lockdown.;;;;;;;;;;;;;x
-ap_lock_down;Our borders are closed, while it's rindering our research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
+ap_lock_down;Close the borders!;;;;;;;;;;;;;x
+ap_lock_down;We can close our borders, while it will rinderour research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
 ap_lock_down_title;Declare total lockdown!;;;;;;;;;;;;;x
 ap_lock_down_desc;We may declare Lockdown to avoid infected immigrants, but that would rinder our research capalabilities.;;;;;;;;;;;;;x
 ap_remove_lock_down_title;Remove lockdown policy.;;;;;;;;;;;;;x
@@ -70,7 +70,9 @@ ap_ritual_title;The Dark Ritual;;;;;;;;;;;;;x
 ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritual that will bring this world as we know it to an end once and for all.;;;;;;;;;;;;;x
 ap_sacrifice_title;Sacrifice;;;;;;;;;;;;;x
 ap_sacrifice_desc;We can perform a quick sacrifice to strengthen our zombie army;;;;;;;;;;;;;x
-EVTNAME66029;LOCKDOWN!;;;;;;;;;;;;;x
+ap_quarantine_title;Quarantine!;;;;;;;;;;;;;x
+ap_quarantine;By enacting an quarantine policy we can stop spread between infected provinces, but this may upset the people and disrupt the economy.;;;;;;;;;;;;;x
+EVTNAME66029;CLOSE THE BORDERS!;;;;;;;;;;;;;x
 EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;;;;;;x
 EVTOPTA66029;A worthy sacrifice.;;;;;;;;;;;;;x
 EVTNAME66030;Reopening our borders.;;;;;;;;;;;;;x
@@ -97,6 +99,9 @@ EVTOPTB66036;It's better if we stay safe inside.;;;;;;;;;;;;;x
 EVTNAME66037;Expedition into the Wasteland;;;;;;;;;;;;;x
 EVTDESC66037;Our soldiers ventured into the Wasteland and managed to certify it's indeed suitable to human life once again! We can start to resettle!;;;;;;;;;;;;;x
 EVTOPTA66037;Great!;;;;;;;;;;;;;x
+EVTNAME66038;Quarantine!;;;;;;;;;;;;;x
+EVTDESC66038;In light of the recent outbreak of the undead, the government has decided to enact a quarantine across the affected areas. Effective immediately, all individuals residing in these areas will be prohibited from leaving, and no new persons will be permitted to enter. Any persons suspected of being infected with the zombie virus will be immediately quarantined, and those displaying symptoms will be taken into custody for further examination.;;;;;;;;;;;;;x
+EVTOPTA66038;A necessary evil.;;;;;;;;;;;;;x
 EVTNAME66300;The rise of the Herald of the Plague;;;;;;;;;;;;;x
 EVTDESC66300;As you march forth, the world trembles at your approach. The very land itself decays beneath your feet, and the skies turn black as your armies of undead blot out the sun. The people of the world cower in fear, for they know that their end is nigh.;;;;;;;;;;;;;x
 EVTOPTA66300;ARISE!;;;;;;;;;;;;;x
