--- a/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
+++ b/TGCApocalypse1836/localisation/0Apocalypse 1836.csv
@@ -49,12 +49,16 @@ nogovernment;Wild wasteland;;;;;;;;;;;;;x
 noIdeology;Wilderness;;;;;;;;;;;;;x
 noIssue;None;;;;;;;;;;;;;x
 undead_party;"Plague Visionaries";;;;;;;;;;;;;x
+ap_lock_down_modifier;Closed Borders.;;;;;;;;;;;;;x
+ap_lock_down_modifier_desc;We have closed our borders in an attempt to stop the entrance of infected immigrants.;;;;;;;;;;;;;x
+ap_quarantine_modifier;Quarantine;;;;;;;;;;;;;x
+ap_quarantine_modifier_desc;We are isolating people and neighborhoods that are possible infected to avoid internal spread.;;;;;;;;;;;;;x
 ap_lock_down;Close the borders!;;;;;;;;;;;;;x
-ap_lock_down;We can close our borders, while it will rinderour research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
-ap_lock_down_title;Declare total lockdown!;;;;;;;;;;;;;x
-ap_lock_down_desc;We may declare Lockdown to avoid infected immigrants, but that would rinder our research capalabilities.;;;;;;;;;;;;;x
-ap_remove_lock_down_title;Remove lockdown policy.;;;;;;;;;;;;;x
-ap_remove_lock_down_desc;It's better if we open our borders.;;;;;;;;;;;;;x
+ap_lock_down;We can close our borders, while it will hinder our research efforts, this may prevent infected immigrants from entering our nation.;;;;;;;;;;;;;x
+ap_lock_down_title;Close the borders!;;;;;;;;;;;;;x
+ap_lock_down_desc;We may close our borders to avoid infected immigrants, but that would rinder our research capalabilities and heavily reduce immigration.;;;;;;;;;;;;;x
+ap_remove_lock_down_title;Reopen the borders.;;;;;;;;;;;;;x
+ap_remove_lock_down_desc;It's better if we open our borders and go back to normality.;;;;;;;;;;;;;x
 ap_state_of_emergency_title;Declare State of Emergency;;;;;;;;;;;;;x 
 ap_state_of_emergency_desc;By declaring a state of emergency, we have suspended the normal functions of the executive, legislative, and judicial powers and handed extensive political control over to the military. As such, elections are suspended and we've pulled together emergency funds and resources to combat the zombie menace.;;;;;;;;;;;;;x
 ap_state_of_emergency;State of Emergency;;;;;;;;;;;;;x
@@ -71,7 +75,9 @@ ap_ritual_desc;With enough holy cities desecrated we can performance a dark ritu
 ap_sacrifice_title;Sacrifice;;;;;;;;;;;;;x
 ap_sacrifice_desc;We can perform a quick sacrifice to strengthen our zombie army;;;;;;;;;;;;;x
 ap_quarantine_title;Quarantine!;;;;;;;;;;;;;x
-ap_quarantine;By enacting an quarantine policy we can stop spread between infected provinces, but this may upset the people and disrupt the economy.;;;;;;;;;;;;;x
+ap_quarantine_desc;By enacting an quarantine policy we can stop spread between infected provinces, but this may upset the people and disrupt the economy.;;;;;;;;;;;;;x
+ap_remove_quarantine_title;End the Quarantine Policy.;;;;;;;;;;;;;x
+ap_remove_quarantine_desc;We can now remove the Quarantine Policy, as we believe it's not needed anymore.;;;;;;;;;;;;;x
 EVTNAME66029;CLOSE THE BORDERS!;;;;;;;;;;;;;x
 EVTDESC66029;We have decided to close our borders! We can not risk taking in infected immigrants!;;;;;;;;;;;;;x
 EVTOPTA66029;A worthy sacrifice.;;;;;;;;;;;;;x
